Bug 25832 - mount option MNT_NOSYMFOLLOW isn't exported by statfs
Summary: mount option MNT_NOSYMFOLLOW isn't exported by statfs
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: kern (show other bugs)
Version: Unspecified
Hardware: Any Any
: Normal Affects Only Me
Assignee: dwmalone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2001-03-15 19:20 UTC by Tony Finch
Modified: 2001-05-28 22:31 UTC (History)
0 users

See Also:


Attachments
file.diff (545 bytes, patch)
2001-03-15 19:20 UTC, Tony Finch
no flags Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Tony Finch 2001-03-15 19:20:00 UTC
mount option MNT_NOSYMFOLLOW isn't exported by statfs
Comment 1 dwmalone freebsd_committer freebsd_triage 2001-03-15 19:54:07 UTC
Responsible Changed
From-To: freebsd-bugs->dwmalone

I'll have a look at this - I just want to investigate the knock-on 
effects of the patch and the comment just above the patch. 
.
Comment 2 dwmalone freebsd_committer freebsd_triage 2001-05-28 22:29:58 UTC
State Changed
From-To: open->closed

MNT_NOSYMFOLLOW and MNT_EXPUBLIC now available in -stable.  The 
corrisponding change in -current was made some time ago by Kirk.