Add MNT_NOSYMFOLLOW and MNT_EXPUBLIC to the list of flags visable to statfs. (The corrisponsing change was made to -current some time ago as part of Kirk's snapshot stuff).

PR:		25832
Submitted by:	Tony Finch <dot@dotat.at>
Approved by:	mckusick

Former-commit-id: 60cc42901b4657bb5d0d0ddca3f169c1aea7b922